# KeepAlive

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: app.manifest  keepalive.c  power.c  power.h  timer.c  timer.h  tray.c  tray.h
